--- a/ConversionApp/ConversionApp/ConversionApp.csproj
+++ b/ConversionApp/ConversionApp/ConversionApp.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Country.cs" />
     <Compile Include="Models\MongoConnect.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
