--- a/ConversionApp/ConversionApp/ConversionApp.csproj
+++ b/ConversionApp/ConversionApp/ConversionApp.csproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DetailsController.cs" />
+    <Compile Include="Controllers\FavoritesController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
