--- a/ConversionApp/ConversionApp/ConversionApp.csproj
+++ b/ConversionApp/ConversionApp/ConversionApp.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Controllers\DetailsController.cs" />
     <Compile Include="Controllers\FavoritesController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\RecentsController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
