retrieve recents kristi

--- a/ConversionApp/ConversionApp/ConversionApp.csproj
+++ b/ConversionApp/ConversionApp/ConversionApp.csproj
@@ -152,6 +152,7 @@
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="scripts\main.js" />
+    <Content Include="scripts\Tests.js" />
     <Content Include="styles\style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -159,6 +160,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DetailsController.cs" />
     <Compile Include="Controllers\FavoritesController.cs" />
+    <Compile Include="Controllers\RecController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RecentsController.cs" />
     <Compile Include="Controllers\UserController.cs" />
