--- a/ConversionApp/ConversionApp/ConversionApp.csproj
+++ b/ConversionApp/ConversionApp/ConversionApp.csproj
@@ -131,6 +131,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="images\fav2.png" />
+    <Content Include="images\home.png" />
+    <Content Include="images\logout.png" />
     <Content Include="images\moon.png" />
     <Content Include="images\plugs\A.jpg" />
     <Content Include="images\plugs\B.jpg" />
@@ -147,7 +150,10 @@
     <Content Include="images\plugs\M.jpg" />
     <Content Include="images\plugs\N.jpg" />
     <Content Include="images\plugs\O.jpg" />
+    <Content Include="images\recent.png" />
+    <Content Include="images\search.png" />
     <Content Include="images\sun.png" />
+    <Content Include="images\user.png" />
     <Content Include="index.html" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
